junit wip module, new approach